# network-traffic-collector

./: CMakeLists.txt  FindPCAP.cmake  README.md  addrs_ioctl.c  agent.yml  docker-compose.yml  filter.c  filter.h  log.c  log.h  ntc.c  ntc.h  ntc_sock_raw.c  ntc_start.sh  options.c  options.h  server.c  server.h  server.mjs  setup.sh  signature.c  signature.h  test.c  test_pcap.c  util.c  util.h
.github/workflows/: build.yml  release.yml
